fix: max-width for component-cards on mobile

--- a/src/components/ComponentCard.module.css
+++ b/src/components/ComponentCard.module.css
@@ -13,6 +13,6 @@
 @media screen and (max-width: 768px) {
   .component-card {
     --component-illustration-svg-max-height: none;
-    --cardgroup-card-max-width: 550px;
+    --cardgroup-card-max-width: 400px;
   }
 }
